# DermAssist_v1

./: .env.example  .env.production.template  .gitignore  LICENSE  PRIVACY.md  Procfile  README.md  alembic.ini  docker-compose.yml  nixpacks.toml  pyproject.toml  railway.json  requirements-dev.txt  requirements.txt
backend/: auth.py  citations.py  config.py  db.py  main.py  orchestrator.py  preflight.py  schemas.py
backend/prompts/: visual_context.py
backend/retrieval/: __init__.py  bm25.py  dense.py  embed.py  models.py  rrf.py
backend/routes/: auth.py  chat.py  encounters.py  pages.py
backend/static/: app.css
backend/templates/: base.html  encounter_new.html  encounter_result.html  encounters_list.html  login.html
backend/text/: __init__.py  pii.py
backend/vlm/: __init__.py  chat.py  client.py  prompt.py  retry.py
data/: chunks.json  condition_scope.json  dataset_audit.json  gold_set.jsonl  visual_descriptions.json
demo/: .env.example  README.md  app.py  llm.py  prompt.py  storage.py
demo/templates/: base.html  encounters.html  login.html  result.html  upload.html
docs/: BLUEPRINT.md  SCHEMA_CURRENT.md  TASK_GRAPH.md  TIPS_LANDED.md  V1_SECURITY_AUDIT.md  V1_VERIFY_REPORT.md  deploy.md  dermnet_attribution.md  eval-limitations.md  path-to-production.md  setup.md
eval/: README.md  __init__.py  build_gold_set.py  gold_set.py  metrics.py  report.py  runner.py
migrations/: 001_init_schema.sql  002_seed_demo_user.sql  003_add_chat_messages_and_oauth.sql  004_password_hash_nullable.sql  005_add_patient_context.sql
migrations/alembic/: env.py
notebooks/: 02_ocr_pipeline.ipynb  03_fewshot_gen.ipynb  04_dataset_audit.ipynb  04b_audit_augment.ipynb
scripts/: build_audit_augment_notebook.py  build_dataset_audit_notebook.py  build_fewshot_gen_notebook.py  build_ocr_pipeline_notebook.py  download_qd_4416.sh  install-commit-hook.sh  run_migrations.sh  seed_kb_chunks.py  start_production.sh
tests/: conftest.py
tests/integration/: test_auth_flow.py  test_chat_wired.py  test_encounter_preflight.py  (+6 more)
(+13 files in other folders)
