[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vlm-dermatology"
version = "0.1.0"
description = "DermAssist VN — VLM Clinical Decision Support MVP for Vietnamese dermatology"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "DermAssist VN Team" }]
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pgvector>=0.2.5",
    "pyjwt>=2.8.0",
    "bcrypt>=4.1.0",
    "python-multipart>=0.0.9",
    "jinja2>=3.1.3",
    "httpx>=0.27.0",
    "opencv-python-headless>=4.9.0",
    "numpy>=1.26.0",
    "pillow>=10.2.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "httpx>=0.27.0",
]
gpu = [
    # Install only on Colab / GPU machine; not required locally
    "vllm>=0.4.0",
    "torch>=2.2.0",
    "transformers>=4.40.0",
    "auto-awq>=0.2.0",
]
ocr = [
    # For TIP-002 if PDF needs OCR
    "pymupdf>=1.24.0",
    "easyocr>=1.7.0",
]

# === This block is the fix for the install error ===
# Tell setuptools exactly which directories are Python packages.
# Without this, flat-layout repos with mixed dirs fail editable install.
[tool.setuptools.packages.find]
include = ["backend*", "eval*"]
exclude = [
    "tests*", "notebooks*", "data*", "frontend*",
    "migrations*", "deploy*", "scripts*", "docs*",
]
# ====================================================

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]